versions/v2.12/modules/en/pages/cluster-admin/project-admin/project-admin.adoc
= Project Administration
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, zh]
endif::[]
:revdate: 2025-08-18
:page-revdate: {revdate}
:community-path: how-to-guides/advanced-user-guides/manage-projects/index.adoc 
:product-path: cluster-admin/project-admin/project-admin.adoc
ifeval::["{build-type}" != "community"]
:xref-cluster-project-roles: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
:xref-global-permissions: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/global-permissions.adoc
:xref-project-resource-quotas: xref:cluster-admin/project-admin/project-resource-quotas/project-resource-quotas.adoc
:xref-custom-roles: xref:rancher-admin/users/authn-and-authz/manage-role-based-access-control-rbac/custom-roles.adoc
:xref-namespaces: xref:cluster-admin/namespaces.adoc
:xref-add-users-to-projects: xref:cluster-admin/project-admin/add-users-to-projects.adoc
:xref-rancher-project-tools: xref:observability/rancher-project-tools.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-cluster-project-roles: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/cluster-and-project-roles.adoc
:xref-global-permissions: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/global-permissions.adoc 
:xref-project-resource-quotas: xref:how-to-guides/advanced-user-guides/manage-projects/manage-project-resource-quotas/index.adoc
:xref-custom-roles: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/manage-role-based-access-control-rbac/custom-roles.adoc
:xref-namespaces: xref:how-to-guides/new-user-guides/manage-namespaces.adoc
:xref-add-users-to-projects: xref:how-to-guides/new-user-guides/add-users-to-projects.adoc
:xref-rancher-project-tools: xref:reference-guides/rancher-project-tools.adoc
endif::[]

_Projects_ are objects introduced in Rancher that help organize namespaces in your Kubernetes cluster. You can use projects to create multi-tenant clusters, which allows a group of users to share the same underlying resources without interacting with each other's applications.

In terms of hierarchy:

* Clusters contain projects
* Projects contain namespaces

Within Rancher, projects allow you to manage multiple namespaces as a single entity. In native Kubernetes, which does not include projects, features like role-based access rights or cluster resources are assigned to individual namespaces. In clusters where multiple namespaces require the same set of access rights, assigning these rights to each individual namespace can become tedious. Even though all namespaces require the same rights, there's no way to apply those rights to all of your namespaces in a single action. You'd have to repetitively assign these rights to each namespace!

Rancher projects resolve this issue by allowing you to apply resources and access rights at the project level. Each namespace in the project then inherits these resources and policies, so you only have to assign them to the project once, rather than assigning them to each individual namespace.

Yo{xref-add-users-to-projects}[

* xref:cluster-admin/project-admin/add-users-to-projects.adoc[][Assign users access to a group of namespaces]
* Assign users {xref-cluster-project-roles}#_project_roles[specific roles in a project]. A role can be owner, member, read-only, or {xref-custom-roles}[custom]
* {xref-project-resource-quotas}[Set resource quotas]
* {xref-namespaces}[Manage namespaces]
* {xref-rancher-project-tools}[Configure tools]

== Authorization

Non-administrative users are only authorized for project access after an {xref-global-permissions}[administrator], {xref-cluster-project-roles}#_cluster_roles[cluster owner or member], or {xref-cluster-project-roles}#_project_roles[project owner] adds them to the project's *Members* tab.

Whoever creates the project automatically becomes a {xref-cluster-project-roles}#_project_roles[project owner].

== Switching between Projects

To switch between projects, use the drop-down available in the navigation bar. Alternatively, you can switch between projects directly in the navigation bar.

. In the upper left corner, click *☰ > Cluster Management*.
. On the *Clusters* page, go to the cluster where you want to switch projects and click *Explore*.
. In the top navigation bar, select the project that you want to open.
